test/libyul/yulSyntaxTests/for_loop_condition_fail.yul
{
    let x
    for {} x {} {}
}
// ====
// dialect: qrvmTyped 
// ----
// TypeError 1733: (23-24): Expected a value of boolean type "bool" but got "u256"
